# qTox

./: .gitignore  .travis.yml  CMakeLists.txt  res.qrc
.travis/: Dockerfile  env-linux.sh  env-osx.sh  env-windows.sh  git-deploy  install-linux  install-osx  install-windows
src/: main.cpp  nexus.cpp
src/core/: core.cpp
src/persistence/db/: rawdatabase.cpp
src/platform/camera/: directshow.cpp
src/widget/: contentdialog.h  widget.h
